--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,7 @@ args_bin = []
 bin = "./tmp/main"
 cmd = "npx tailwindcss -i ./tailwind.css -o ./public/index.css && templ generate && go build -o ./tmp/main ."
 delay = 1000
-exclude_dir = ["assets", "tmp", "vendor", "testdata"]
+exclude_dir = ["assets", "tmp", "vendor", "testdata", "node_modules"]
 exclude_file = []
 exclude_regex = ["_test.go", "_templ.go"]
 exclude_unchanged = false
