--- a/.air.toml
+++ b/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "tmp"
 [build]
 args_bin = []
 bin = "./tmp/main"
-cmd = "npx tailwindcss -i ./tailwind.css -o ./public/index.css && templ generate && go build -o ./tmp/main ."
+cmd = "npx tailwindcss -i ./tailwind.css -o ./public/index.css && templ generate && go build -o ./tmp/main -tags 'fts5' ."
 delay = 1000
 exclude_dir = ["assets", "tmp", "vendor", "testdata", "node_modules"]
 exclude_file = []
